[gd_scene load_steps=5 format=3 uid="uid://clfcvxr67ccqc"]

[ext_resource type="Theme" uid="uid://bqyj23m0yjbg4" path="res://Assets/main_ui.tres" id="1_1ehe0"]
[ext_resource type="Script" uid="uid://ysjblv4i7cnc" path="res://Scripts/menu_grid.gd" id="1_28flt"]
[ext_resource type="Script" uid="uid://br84a22723n1k" path="res://Scripts/module_loader.gd" id="2_48xlc"]
[ext_resource type="Texture2D" uid="uid://c12pyevx1j2" path="res://Assets/Textures/wallhaven-jx628m.png" id="2_ce3w2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_1ehe0")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("2_ce3w2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("1_28flt")

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_1ehe0")
theme_type_variation = &"BoldLabel"
text = "Kalandjáték motor"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 3

[node name="SelectButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="Editor_Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_1ehe0")
text = "Editor"

[node name="Quit_Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[node name="Load_Module_Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load Module"

[node name="ModuleLoader" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_48xlc")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SelectButton" to="PanelContainer/MarginContainer/VBoxContainer" method="_on_select_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Editor_Button" to="PanelContainer/MarginContainer/VBoxContainer" method="_on_editor_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit_Button" to="PanelContainer/MarginContainer/VBoxContainer" method="_on_quit_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Load_Module_Button" to="PanelContainer/MarginContainer/VBoxContainer" method="_on_load_module_button_pressed"]
